Background img home

--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -87,7 +87,7 @@
   background-image: url("../dist/img/home-image.png");
   background-color: #00025B;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .fundo-planos {
