--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -84,7 +84,7 @@
     background-image: url("../dist/img/home-image.png");
     background-color: $primary;
     background-repeat:no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 .fundo-planos {
     width:100%;
