Clientes e funcionalidades home

--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -97,15 +97,6 @@
   background-size: cover;
 }
 
-.msg-pode-contar {
-  font-size: 36.65px;
-  line-height: 100%;
-  text-transform: uppercase;
-  color: var(--pgblack, #F5F5F5);
-  text-align: center;
-  padding-top: 60px;
-}
-
 .fundo-planos {
   width: 100%;
   background-image: url("../dist/img/planos-image.png");
@@ -146,9 +137,10 @@
 
 .titulo-preto {
   font-size: 36.65px;
+  font-weight: 600;
   text-transform: uppercase;
   color: var(--pgblack, #1D1D1B);
-  padding: 10px 0 20px 0;
+  padding: 0px 0 20px 0;
 }
 
 .titulo-azul {
