--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -91,7 +91,7 @@
 .fundo-jumbo {
   width: 100%;
   height: 511px;
-  background-image: url("../dist/img/home-image.png");
+  background-image: url("../dist/img/home-image1.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   background-size: cover;
