--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -87,7 +87,7 @@
 .fundo-jumbo {
     width:100%;
     height: 511px;
-    background-image: url("../dist/img/home-image.png");
+    background-image: url("../dist/img/home-image1.png");
     background-color: $primary;
     background-repeat:no-repeat;
     background-size: cover;
