--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -28,6 +28,18 @@
     color: $secondary;
 }
 
+.nav-item.menu {
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 8px;
+    height: 40px;
+}
+
+.nav-link.menu {
+    font-size: 14px;
+    color: $secondary;
+}
+
 .jumbo-header {
     font-size: 36.65px;
     text-transform: uppercase;
