--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -32,8 +32,8 @@
 .nav-item.menu {
   padding-right: 30px;
   padding-left: 30px;
-  padding-top: 8px;
   height: 40px;
+  text-align: right;
 }
 
 .nav-link.menu {
