--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -57,7 +57,7 @@
 .jumbo-text-planos {
     font-size: 14px;
     color: $light;
-    padding-left: 3rem;
+    //padding-left: 3rem;
 }
 .jumbo-logo-planos {
     padding-right: 3rem;
