--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -106,6 +106,7 @@
   background-color: #00025B;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .fundo-planos {
