--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,6 +7,11 @@
     height: 40px;
     border: 1px solid var(--pgblue, $secondary);
 }
+.btn-signin:hover {
+    background-color: #e3e3ee;
+    border: 1px solid $secondary;
+}
+
 .btn-registo {
     font-size: 14px;
     font-weight: bold;
@@ -17,6 +22,11 @@
     background: var(--pgblue, $primary);
     border: 1px solid var(--pgblue, $primary);
 }
+.btn-registo:hover {
+    background-color: #e3e3ee;
+    border: 1px solid $secondary;
+    color: $secondary;
+}
 
 .btn.header-menu-item {
     font-size: 14px;
@@ -24,7 +34,10 @@
     padding-top: 8px;
     height: 40px;
     color: $secondary;
-    color: $secondary;
+}
+.btn.header-menu-item:hover {
+    background-color: #e3e3ee;
+    border: 1px solid $secondary;
 }
 
 .nav-item.menu {
