--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -115,7 +115,7 @@
 .fundo-jumbo {
   width: 100%;
   height: 911px;
-  background-image: url("../dist/img/home-image1.png");
+  background-image: url("../img/home-image1.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   background-size: cover;
@@ -124,7 +124,7 @@
 
 .fundo-planos {
   width: 100%;
-  background-image: url("../dist/img/planos-image.png");
+  background-image: url("../img/planos-image.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   background-size: cover;
@@ -132,7 +132,7 @@
 
 .fundo-faqs {
   width: 100%;
-  background-image: url("../dist/img/faqs.png");
+  background-image: url("../img/faqs.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   height: 300px;
@@ -173,7 +173,7 @@
   font-size: 36.65px;
   text-transform: uppercase;
   color: var(--pgblue, #00025B);
-  padding: 40px 0 20px 0;
+  padding: 0px 0 20px 0;
 }
 
 .btn.blog-btn {
@@ -199,7 +199,7 @@
 
 .newsletter {
   width: 100%;
-  background-image: url("../dist/img/barra_newsletter.png");
+  background-image: url("../img/barra_newsletter.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   background-size: cover;
@@ -313,7 +313,7 @@ h2.newsletter-title, .newsletter-title.h2 {
 
 .fundo-blog {
   width: 100%;
-  background-image: url("../dist/img/blog.png");
+  background-image: url("../img/blog.png");
   background-color: #00025B;
   background-repeat: no-repeat;
   background-position: center;
