--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -109,7 +109,7 @@
 .fundo-jumbo {
     width:100%;
     height: 911px;
-    background-image: url("../dist/img/home-image1.png");
+    background-image: url("../img/home-image1.png");
     background-color: $primary;
     background-repeat:no-repeat;
     background-size: cover;
@@ -118,14 +118,14 @@
 
 .fundo-planos {
     width:100%;
-    background-image: url("../dist/img/planos-image.png");
+    background-image: url("../img/planos-image.png");
     background-color: $primary;
     background-repeat:no-repeat;
     background-size: cover;
 }
 .fundo-faqs {
     width:100%;
-    background-image: url("../dist/img/faqs.png");
+    background-image: url("../img/faqs.png");
     background-color: $primary;
     background-repeat:no-repeat;
     height: 300px;
@@ -165,7 +165,7 @@
     font-size: 36.65px;
     text-transform: uppercase;
     color: var(--pgblue, $primary);
-    padding: 40px 0 20px 0;
+    padding: 0px 0 20px 0;
 }
 
 .btn.blog-btn {
@@ -189,7 +189,7 @@
 
 .newsletter {
     width:100%;
-    background-image: url("../dist/img/barra_newsletter.png");
+    background-image: url("../img/barra_newsletter.png");
     background-color: $primary;
     background-repeat:no-repeat;
     background-size: cover;
@@ -300,7 +300,7 @@ h2.newsletter-title {
 .fundo-blog {
     width:100%;
     //border-radius: 0 0 25px 25px;
-    background-image: url("../dist/img/blog.png");
+    background-image: url("../img/blog.png");
     background-color: $primary;
     background-repeat:no-repeat;
     background-position:center;
