--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -156,6 +156,10 @@
   border: 1px solid #F5F5F5;
 }
 
+.btn.header-menu-item.menu-item-footer:hover {
+  color: #00025B;
+}
+
 .footer.py-3 {
   padding-top: 2rem !important;
   padding-bottom: 2rem !important;
