--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -340,7 +340,7 @@ h2.newsletter-title, .newsletter-title.h2 {
   color: #fe0d00;
 }
 
-.input-group-icon {
+.input-group-text.input-group-icon {
   background-color: #F5F5F5;
 }
 
