--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -322,7 +322,7 @@ h2.newsletter-title {
     color: #fe0d00;
 }
 
-.input-group-icon {
+.input-group-text.input-group-icon {
     background-color:$light
 }
 
