--- a/css/payandgo.css
+++ b/css/payandgo.css
@@ -148,16 +148,18 @@
 .btn.header-menu-item.menu-item-footer {
   padding-right: 10px;
   padding-left: 10px;
-  color: #F5F5F5;
+  color: #e3e3ee;
 }
 
 .btn.header-menu-item.menu-item-footer:active {
-  color: #F5F5F5;
-  border: 1px solid #F5F5F5;
+  color: #e3e3ee;
+  border: 0px;
 }
 
 .btn.header-menu-item.menu-item-footer:hover {
   color: #00025B;
+  border: 0px;
+  background-color: #e3e3ee;
 }
 
 .footer.py-3 {
