--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -141,14 +141,16 @@
 .btn.header-menu-item.menu-item-footer {
     padding-right: 10px;
     padding-left: 10px;
-    color: $light;
+    color: #e3e3ee;
 }
 .btn.header-menu-item.menu-item-footer:active {
-    color: $light;
-    border: 1px solid $light;
+    color: #e3e3ee;
+    border: 0px;
 }
 .btn.header-menu-item.menu-item-footer:hover {
     color: $primary;
+    border: 0px;
+    background-color: #e3e3ee;
 }
 
 .footer.py-3 {
